--- a/src/main/resources/com/example/bouncerentalapp/hello-view.fxml
+++ b/src/main/resources/com/example/bouncerentalapp/hello-view.fxml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bouncerentalapp.HelloController" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bouncerentalapp.HelloController">
+   <children>
+      <Label layoutX="186.0" layoutY="36.0" text="Welcome to Bounce Rentals!">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <DatePicker layoutX="22.0" layoutY="138.0" />
+      <DatePicker layoutX="213.0" layoutY="138.0" />
+      <Label layoutX="22.0" layoutY="74.0" text="please choose which dates you would like to rent out" />
+      <Button layoutX="22.0" layoutY="200.0" mnemonicParsing="false" text="submit" />
+      <Label layoutX="22.0" layoutY="109.0" text="start date" />
+      <Label layoutX="213.0" layoutY="109.0" text="end date" />
+   </children>
+</AnchorPane>
