--- a/src/main/resources/com/example/bouncerentalapp/hello-view.fxml
+++ b/src/main/resources/com/example/bouncerentalapp/hello-view.fxml
@@ -1,39 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
 
-
-<VBox spacing="10" alignment="CENTER" xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.bouncerentalapp.HelloController">
+<VBox alignment="CENTER" prefHeight="421.0" prefWidth="604.0" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bouncerentalapp.HelloController">
 
    <padding>
-      <Insets top="20" right="20" bottom="20" left="20"/>
+      <Insets bottom="20" left="20" right="20" top="20" />
    </padding>
 
-   <Label text="Welcome to Bounce Rental!" style="-fx-font-size: 18px;"/>
+   <Label style="-fx-font-size: 18px;" text="Welcome to Bounce Rental!" />
 
    <HBox spacing="10">
-      <DatePicker fx:id="startDatePicker" promptText="Start Date"/>
-      <DatePicker fx:id="endDatePicker" promptText="End Date"/>
-      <Button text="Check Availability" onAction="#onCheckAvailabilityClick"/>
-      <Button text="View Product Reviews" onAction="#handleViewReviews"/>
+      <DatePicker fx:id="startDatePicker" promptText="Start Date" />
+      <DatePicker fx:id="endDatePicker" promptText="End Date" />
+      <Button onAction="#onCheckAvailabilityClick" text="Check Availability" />
+      <Button mnemonicParsing="false" onAction="#adminSignIn" prefHeight="28.0" prefWidth="95.0" text="admin sign in" />
    </HBox>
 
    <TableView fx:id="productTable" prefHeight="300">
       <columns>
-         <TableColumn fx:id="nameColumn" text="Product Name" prefWidth="150"/>
-         <TableColumn fx:id="priceColumn" text="Price" prefWidth="100"/>
-         <TableColumn fx:id="availableColumn" text="Available Qty" prefWidth="120"/>
+         <TableColumn fx:id="nameColumn" prefWidth="150" text="Product Name" />
+         <TableColumn fx:id="priceColumn" prefWidth="100" text="Price" />
+         <TableColumn fx:id="availableColumn" prefWidth="120" text="Available Qty" />
       </columns>
    </TableView>
 </VBox>
